Task2/task2.css
:root {
	--textColor: #619bb9;
	--grey: #7b7b7b;
}
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	background-color: #e4eef3;
	padding: 0;
	margin: 0;
	background-repeat: no-repeat;
	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.header {
	grid-area: header;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.navBar {
	border-radius: 20px;
	display: inline-block;
	flex: 2;
	flex-wrap: nowrap;
}

.navBar ul {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-self: flex-end;
}

.navBar li {
	border-radius: 20px;

	list-style: none;

	position: relative;
}

.droplist {
	position: relative;
}

.dropdown-content {
	border-radius: 20px;
	overflow: hidden;
	display: none;
	position: absolute;
	left: 50%;

	transform: translateX(-50%);
	background-color: var(--textColor);
	min-width: 150px;
	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
	z-index: 1;
}

.dropdown-content a {
	display: block;
	text-align: left;
	padding: 12px 16px;
	text-decoration: none;
	color: white;
	font-size: 15px;
}

.dropdown-content a:hover {
	background-color: var(--grey);
}

.droplist:hover .dropdown-content {
	display: block;
}

.droplist:hover .dropDown::after {
	z-index: 2;
	display: block;
	content: "";
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	border-width: 7px;
	border-style: solid;
	border-color: white transparent transparent transparent;
}

.navBar li:hover {
	box-shadow: 4px 2px 10px var(--textColor);
}

.navBar li > a {
	padding: 30px;
	color: var(--textColor);
	font-size: 20px;
	text-decoration: none;
}

#logo {
	margin-left: 10px;
	max-height: 150px;
	max-width: 200px;
}

.container {
	height: 100vh;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr;
	grid-template-rows: 0.5fr 3.3fr 0.2fr;
	grid-template-areas:
		"header header header header"
		"main main main side"
		"footer footer footer footer";
}

.main {
	background-image: url(images/helping.png);
	background-size: contain;
	background-repeat: no-repeat;
	background-position: left;
	background-color: #192a32;
	position: relative;
	grid-area: main;
	padding: 20px;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}
::selection {
	background-color: rgb(250, 250, 151);
	color: var(--textColor);
}
.text {
	text-align: left;
	max-width: 800px;
	background-image: url(images/backgroundColor.png);
	/*margin-left: 30%;*/
	padding: 10px;
	border-radius: 5px;
	margin-left: 52%;
	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
		sans-serif;
}

.text h3 {
	font-size: 30px;
	color: white;
	margin-bottom: 20px;
	line-height: 1.3;
}

.text h6 {
	font-size: 15px;

	line-height: 1.5;
	color: white;
}

.footer {
	padding: 30px 0;
	grid-area: footer;
	line-height: 1.5;
	text-align: center;
	color: white;
	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
	background-color: #3c4d54;
}
.info {
	display: flex;
	flex-direction: row;
	text-wrap: wrap;
	justify-content: center;
	gap: 15%;
}
#location,
#offShore,
#form {
	max-width: 20%;
	height: 100%;
	display: flex;
	padding: 20px 0;
	flex-direction: column;
	justify-content: center;
}
#offShore a {
	text-decoration: none;
}

#form input,
#form button,
textarea {
	width: 90%;
	border-radius: 5px;
	padding: 5px;
}
#form input,
button {
	height: 10%;
}
#form button:hover {
	background-color: #5796b5;
}
#form button {
	background-color: #80afc7;
	color: white;
	border-color: white;
}
#form input:focus,
textarea:focus {
	background-color: rgb(155, 151, 151);
	color: white;
}
#form input,
textarea {
	background-color: transparent;
	border-color: white;
	margin-bottom: 8px;
}
.image {
	flex: auto;
}
#form textarea {
	display: block;
	max-width: 90%;
	height: 90px;
	resize: none;
}
.footer h4 {
	color: white;
}
.footer h3 {
	color: #5796b5;
}
.side {
	background-color: #192a32;
	grid-area: side;
	color: white;
}
#imageSlideShow {
	height: 40%;
	width: 100%;
	background-image: url(images/img1.png);
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	animation-name: imagesAnimation;
	animation-duration: 5s;
	animation-fill-mode: both;
	animation-iteration-count: infinite;
	margin-bottom: 20px;
}

@keyframes imagesAnimation {
	0% {
		background-image: url("images/img1.png");
	}
	50% {
		background-image: url("images/img2.png");
	}
	100% {
		background-image: url("images/img1.png");
	}
}
@media only screen and (max-width: 1400px) {
	.side {
		display: none;
	}
	.main {
		width: 133.33%;
	}
	.text {
		background-color: transparent;
	}
}

